--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <section class="logo">
     <span class="green">G</span>
-    <span class="white">o</span>
+    <span class="blue">o</span>
     <span class="red">o</span>
     <span class="yellow">g</span>
     <span class="purple">l</span>
